[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "post-archiver"
version = "1.1.0"
description = "A tool to scrape YouTube community posts"
readme = "README.md"
authors = [{name = "sadadYes", email = "syaddadpunya@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["youtube", "scraper", "community", "posts", "python"]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "playwright>=1.41.0",
    "packaging>=23.0",
    "setuptools>=67.0.0",
    "requests>=2.31.0",
    "urllib3>=2.1.0",
    "pathlib>=1.0.1"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/sadadYes/post-archiver"
Repository = "https://github.com/sadadYes/post-archiver.git"
Documentation = "https://github.com/sadadYes/post-archiver#readme"
"Bug Tracker" = "https://github.com/sadadYes/post-archiver/issues"

[project.scripts]
post-archiver = "post_archiver.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
